Updated encrypt/decrypt btn display property
encrypt/decrypt btn will now be shown after each successful operation

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ staticfiles/uploads/documents/
 __pycache__/
 
 personal_portfolio/private.py
-*.pyc
+personal_portfolio/__pycache__/settings.cpython-38.pyc
